@@ -95,7 +95,7 @@ describe SimpleDeploy do
 
     it "should update when the deployment is locked and force is set true" do
       deployment_mock = mock 'deployment'
-      deployment_mock.should_receive(:clear_for_deployment?).and_return(false, true)
+      deployment_mock.should_receive(:clear_for_deployment?).and_return(false, true, true)
       deployment_mock.should_receive(:clear_deployment_lock).with(true)
       @stack.stub(:deployment).and_return(deployment_mock)
 
